--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,21 +1,17 @@
 <h2>Sign up</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+<%= bootstrap_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+<%= devise_error_messages! %>
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, autofocus: true %></div>
+<%= f.email_field :email, autofocus: true %>
+<%= f.text_field :lab_id %>
 
-  <div><%= f.label :lab_id %><br />
-  <%= f.text_field :lab_id %></div>
+<% if @validatable %><i>(<%= @minimum_password_length %> characters minimum)</i><% end %>
+<%= f.password_field :password, autocomplete: "off" %>
 
-  <div><%= f.label :password %> <% if @validatable %><i>(<%= @minimum_password_length %> characters minimum)</i><% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %></div>
+<%= f.password_field :password_confirmation, autocomplete: "off" %>
 
-  <div><%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %></div>
-
-  <div><%= f.submit "Sign up" %></div>
+<%= f.submit "Sign up" %>
 <% end %>
 
 <%= render "devise/shared/links" %>
