Add New Container button to index

--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,5 +1,1 @@
-<h1>Projects</h1>
-<%= link_to "New Project", new_project_path %>
-<% @projects.each do |project| %>
-  <%= link_to project.project_id, project %>
-<% end %>
+<%= button_tag "New Container", id: "new_container" %>
