Setup container creation form (no saving)

--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,3 +1,8 @@
 <%= button_tag "New Container", id: "new_container" %>
-<div id = "container_form">
-</div>
+<%= bootstrap_form_tag html: { id: "container_form" } do |f| %>
+  <%= f.text_field :container_name, label: "Name" %>
+  <%= f.text_field :container_id, label: "ID" %>
+  <%= f.select :container_type, ["96-pcr", "96-flat", "96-flat-uv", "96-deep", "384-pcr", "384-flat"], label: "Type" %>
+  <%= f.select :storage, ["ambient", "warm_37", "cold_4", "cold_20", "cold_80"] %>
+  <%= f.submit %>
+<% end %>
