--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,4 +1,5 @@
 <%= button_tag "New Container", id: "new_container" %>
+<div id="container_list"></div>
 <%= bootstrap_form_tag html: { id: "container_form" } do |f| %>
   <%= f.text_field :container_name, label: "Name" %>
   <%= f.text_field :container_id, label: "ID" %>
