--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -3,7 +3,7 @@
 <%= bootstrap_form_tag html: { id: "container_form" } do |f| %>
   <%= f.text_field :container_name, label: "Name" %>
   <%= f.text_field :container_id, label: "ID" %>
-  <%= f.select :container_type, ["96-pcr", "96-flat", "96-flat-uv", "96-deep", "384-pcr", "384-flat"], label: "Type" %>
+  <%= f.select :container_type, [["96 well V-bottom (PCR) plate", "96-pcr"], ["96 well flat-bottom optically clear plate", "96-flat"], ["96 well flat-bottom UV transparent plate", "96-flat-uv"], ["96 well flat-bottom extended capacity optically opaque plate", "96-deep"], ["384 well V-bottom (PCR) plate", "384-pcr"], ["384 well flat-bottom optically clear plate", "384-flat"]], label: "Type" %>
   <%= f.select :storage, ["ambient", "warm_37", "cold_4", "cold_20", "cold_80"] %>
   <%= f.submit %>
 <% end %>
