Create template New Instruction form

--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,3 +1,7 @@
 <%= button_tag "New Container", id: "new_container" %>
 <div id="container_list"></div>
 <%= render "containers/form" %>
+
+<%= button_tag "New Instruction", id: "new_instruction" %>
+<div id="instruction_list"></div>
+<%= render "instructions/form" %>
