--- a/app/views/instructions/_form.html.erb
+++ b/app/views/instructions/_form.html.erb
@@ -1,4 +1,5 @@
 <%= bootstrap_form_tag html: { id: "instruction_form" } do |f| %>
-  <%= f.select :instruction_type, ["pipette", "seal", "thermocycle"], label: "Type" %>
+  <%= f.select :container, [], id: "container", label: "Container" %>
+  <%= f.select :instruction_type, ["distribute", "transfer"], label: "Type" %>
   <%= f.submit %>
 <% end %>
