Create and populate distribute and transfer instruction forms

--- a/app/assets/stylesheets/instructionForm.css.scss
+++ b/app/assets/stylesheets/instructionForm.css.scss
@@ -1,3 +1,11 @@
 #instruction_form {
   display: none;
 }
+
+#distribute_instruction_form {
+  display: none;
+}
+
+#transfer_instruction_form {
+  display: none;
+}
