--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -10,6 +10,8 @@
     <div id="workspace" class="col-md-10">
       <%= render "containers/form" %>
       <%= render "instructions/form" %>
+      <%= render "instructions/distribute_form" %>
+      <%= render "instructions/transfer_form" %>
     </div>
   </div>
 </div>
