Add collection of distribute and transfer form data to pass to factory

--- a/app/views/instructions/_distribute_form.html.erb
+++ b/app/views/instructions/_distribute_form.html.erb
@@ -3,6 +3,6 @@
   <%= f.text_field :from_well, hide_label: true, class: "from_well" %>
   <%= f.select :to_container, [], {}, label: "Container", class: "to_container" %>
   <%= f.text_field :to_well, hide_label: true, class: "to_well" %>
-  <%= f.text_field :volume %>
+  <%= f.text_field :volume, class: "volume" %>
   <%= f.submit %>
 <% end %>
