--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,1 +1,26 @@
-<h1><%= link_to "Transcriptic UI", root_path %></h1>
+<nav class="navbar navbar-default fixed" id="main-menu" role="navigation">
+  <div class="container">
+    <div class="navbar-header">
+      <a href="http://www.transcriptic.com"><div class="logo">&nbsp;</div></a>
+    </div>
+    <div class="collapse navbar-collapse navbar-ex1-collapse">
+      <ul class="nav navbar-nav navbar-right">
+        <% if user_signed_in? %>
+        <li>
+          <%= link_to "Profile", "#" %>
+        </li>
+        <li>
+          <%= link_to "Log out", destroy_user_session_path, method: :delete %>
+        </li>
+        <% else %>
+        <li>
+          <%= link_to "Log in", new_session_path(User) %>
+        </li>
+        <li>
+          <%= link_to "Sign up", new_registration_path(User) %>
+        </li>
+        <% end %>
+      </ul>
+    </div>
+  </div>
+</nav>
