--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,3 +1,6 @@
+<%= button_tag "Generate Test Container", id: "test_container" %>
+<%= button_tag "Generate Test Instruction", id: "test_instruction" %>
+
 <div class="container">
   <div class="row">
     <div class="col-md-3">
