--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,18 +1,36 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-2">
-      <%= button_tag "New Container", id: "new_container", class: "btn btn-primary btn-md" %>
-      <div id="container_list"></div>
-      <%= button_tag "New Instruction", id: "new_instruction", class: "btn btn-primary btn-md" %>
-      <div id="instruction_list"></div>
-      <%= button_tag "Submit", class: "btn btn-success btn-md", data: { toggle: "modal", target: "#submitModal" } %>
+    <div class="col-md-3">
+      <div class="row">
+        <div id="organization-workspace">
+          ORGANIZATION WORKSPACE
+        </div>
+      </div>
+      <div class="row">
+        <div id="container-workspace">
+          CONTAINER WORKSPACE
+          <%= button_tag "New Container", id: "new_container", class: "btn btn-primary btn-md" %>
+          <div id="container_list"></div>
+        </div>
+      </div>
     </div>
-
-    <div id="workspace" class="col-md-10">
-      <%= render "containers/form" %>
-      <%= render "instructions/form" %>
-      <%= render "instructions/distribute_form" %>
-      <%= render "instructions/transfer_form" %>
+    <div class="col-md-9">
+      <div id="instruction-workspace">
+        <div class="row">
+          <%= button_tag "New Instruction", id: "new_instruction", class: "btn btn-primary btn-md" %>
+        </div>
+        <div class="row">
+          INSTRUCTION WORKSPACE
+          <div id="instruction_list"></div>
+          <%= render "containers/form" %>
+          <%= render "instructions/form" %>
+          <%= render "instructions/distribute_form" %>
+          <%= render "instructions/transfer_form" %>
+        </div>
+        <div class="row">
+          <%= button_tag "Submit", class: "btn btn-success btn-md", data: { toggle: "modal", target: "#submitModal" } %>
+        </div>
+      <div>
     </div>
   </div>
 </div>
