--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,5 +1,6 @@
 <%= button_tag "Generate Test Container", id: "test_container" %>
-<%= button_tag "Generate Test Instruction", id: "test_instruction" %>
+<%= button_tag "Generate Test Transfer", id: "test_transfer" %>
+<%= button_tag "Generate Test Distribute", id: "test_distribute" %>
 
 <div class="container">
   <div class="row">
