--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-default fixed" id="main-menu" role="navigation">
   <div class="container">
     <div class="navbar-header">
-      <a href="http://www.transcriptic.com"><div class="logo">&nbsp;</div></a>
+      <a href="/"><div class="logo">Transcriptify</div></a>
     </div>
     <div class="collapse navbar-collapse navbar-ex1-collapse">
       <ul class="nav navbar-nav navbar-right">
