Add modal profile view pop-up

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -7,7 +7,9 @@
       <ul class="nav navbar-nav navbar-right">
         <% if user_signed_in? %>
         <li>
-          <%= link_to "Profile", "#" %>
+          <a href="#"
+             data-toggle="modal"
+             data-target="#profileModal">Profile</a>
         </li>
         <li>
           <%= link_to "Log out", destroy_user_session_path, method: :delete %>
