Update skeleton profile with organization placeholder * add micro pipette image as image placeholder for future

--- a/app/views/_profile.html.erb
+++ b/app/views/_profile.html.erb
@@ -3,10 +3,9 @@
         <div class="modal-content">
             <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-            <h4 class="modal-title" id="myModalLabel">Profile</h4>
+            <h4 class="modal-title" id="myModalLabel">Profile <a href="#">Edit</a></h4>
             </div>
-            <div class="modal-body">
-            	<h2>Picture</h2><h2>Organization</h2>
+            <div class="modal-body"><h2>Organization</h2> access Transcriptic.organization.organizationName somehow
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
