--- a/app/assets/stylesheets/tree.css.scss
+++ b/app/assets/stylesheets/tree.css.scss
@@ -2,6 +2,7 @@
   li {
     list-style: none;
     padding-left: 1em;
+    cursor: pointer;
     &.collapsed {
       &:before {
         content: "\f067";
