--- a/app/assets/stylesheets/tree.css.scss
+++ b/app/assets/stylesheets/tree.css.scss
@@ -21,6 +21,12 @@
         width: 1em;
       }
     }
+
+    &.btn {
+      color: #fff;
+      background-color: #428bca;
+      border-radius: 4px;
+    }
   }
   ul {
     padding-left: 0px;
