Refactor and restyle container list

--- a/app/assets/stylesheets/header.css.scss
+++ b/app/assets/stylesheets/header.css.scss
@@ -4,7 +4,7 @@ $a-hover: #f59431;
 .navbar.navbar-default {
   border-radius: 0;
   border: 0;
-  background-color: #3b4a59;
+  background-color: rgba(0, 0, 0, 0.5);
 
   a {
     text-decoration: none;
