--- a/app/assets/stylesheets/tree.css.scss
+++ b/app/assets/stylesheets/tree.css.scss
@@ -1,4 +1,5 @@
 .tree {
+  padding-left: 0px;
   li {
     list-style: none;
     padding-left: 1em;
@@ -31,4 +32,5 @@
   ul {
     padding-left: 0px;
   }
+  
 }
