--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -2,8 +2,8 @@
   <div class="row">
     <div class="col-md-3">
       <div class="row">
-        <div class="workspace" id="organization_workspace">
-          ORGANIZATION WORKSPACE
+        <div class="workspace" id="profile_workspace">
+          <div id="profile_list" class="noselect"></div>
         </div>
       </div>
       <div class="row">
