--- a/app/assets/stylesheets/tree.css.scss
+++ b/app/assets/stylesheets/tree.css.scss
@@ -27,6 +27,9 @@
       color: #fff;
       background-color: #428bca;
       border-radius: 4px;
+      &:hover {
+        background-color: #3071a9;
+      }
     }
   }
   ul {
