Refactor treeview widget to use i tags rather than unicode for icons

--- a/app/assets/stylesheets/tree.css.scss
+++ b/app/assets/stylesheets/tree.css.scss
@@ -4,26 +4,20 @@
     list-style: none;
     padding-left: 1em;
     cursor: pointer;
-    &.collapsed {
-      &:before {
-        content: "\f067";
-        font-family: FontAwesome;
-        display: inline-block;
-        margin-left: -1em;
-        width: 1em;
+    .expander {
+      font-family: FontAwesome;
+      display: inline-block;
+      margin-left: -1em;
+      width: 1em;
+      &:hover {
+        color: #f78848;
       }
     }
-    &.expanded {
-      &:before {
-        content: "\f068";
-        font-family: FontAwesome;
-        display: inline-block;
-        margin-left: -1em;
-        width: 1em;
-      }
+    .span {
+      display: inline-block;
     }
 
-    &.btn {
+    .btn {
       color: #fff;
       background-color: #428bca;
       border-radius: 4px;
