--- a/app/assets/stylesheets/containerWorkspace.css.scss
+++ b/app/assets/stylesheets/containerWorkspace.css.scss
@@ -5,6 +5,7 @@
       width: 100%;
     }
     .container_elem {
+      display: block;
       color: #ecf0f1;
       margin: 5px 0 5px;
       padding: 5px;
