--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -1,19 +1,20 @@
-$background: #4e5361;
-$text_and_outlines: #d9d2ce;
+$background: #F7F8F9;
+$text_and_outlines: #394755;
 $importanttext: #f78848;
-$workspace_back: #ecf0f1;
+$transcriptic: #FBAE17;
+/*$workspace_back: #ecf0f1;*/
+$workspace_back: white;
 $shadow: rgba(0, 0, 0, 0.5);
 
 body {
   background-color: $background;
-  background-image: url('background.png');
 }
 
 .workspace {
   padding: 10px;
   margin: 5px;
   background-color: $workspace_back;
-  border-radius: 4px;
+  /*border-radius: 4px;*/
   -moz-box-shadow:    inset 0 0 2px $shadow;
   -webkit-box-shadow: inset 0 0 2px $shadow;
   box-shadow:         inset 0 0 2px $shadow;
@@ -31,4 +32,11 @@ body {
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
+}
+
+.panel-default{
+  background-color: #F5F7F8;
+}
+.panel-body {
+  background-color: white;
 }
