--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -25,7 +25,7 @@
         </div>
       </div>
       <div class="row">
-        <%= button_tag "Submit", class: "btn btn-success btn-md", id: "submit_run_btn", data: { toggle: "modal", target: "#submitModal" } %>
+        <%= button_tag "Submit Run To Transcriptic", class: "btn", id: "submit_run_btn", data: { toggle: "modal", target: "#submitModal" } %>
       </div>
     </div>
   </div>
