--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -19,8 +19,7 @@
       </div>
       <div class="row">
         <div class="workspace" id="instruction_workspace">
-          <div id="instruction_list">
-            <%= render "scrap/instruction_list" %>
+          <div class="panel-group" id="accordion" id="instruction_list">
           </div>
         </div>
       </div>
