installed SourceSansPro font and glyphs

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,3 +1,14 @@
+@import "variables";
+@import "bootstrap";
+@import "containerWorkspace";
+@import "global";
+@import "header";
+@import "instructionForm";
+@import "instructionWorkspace";
+@import "profileWorkspace";
+@import "tree";
+@import "workspace";
+@import "footer";
 /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
  * listed below.
