--- a/app/assets/stylesheets/header.css.scss
+++ b/app/assets/stylesheets/header.css.scss
@@ -10,9 +10,10 @@ $a-hover: #f59431;
   }
 
   .logo {
+    font-family: $font;
     font-style: italic;
-    text-transform: uppercase;
-    font-size: 1.8em;
+    font-weight: bold;
+    font-size: 2.5em;
     margin-top: 20px;
     width: 191px;
     height: 32px;
