--- a/app/assets/stylesheets/header.css.scss
+++ b/app/assets/stylesheets/header.css.scss
@@ -5,6 +5,10 @@ $a-hover: #f59431;
   border-radius: 0;
   border: 0;
 
+  #scientist{
+    padding: 0;
+  }
+
   a {
     text-decoration: none;
   }
@@ -12,12 +16,11 @@ $a-hover: #f59431;
   .logo {
     font-family: $font;
     font-style: italic;
-    font-weight: bold;
+    font-weight: bolder;
     font-size: 2.5em;
     margin-top: 20px;
     width: 191px;
     height: 32px;
-    /*color: $header-back-color;*/
     &:hover {
       color: $a-hover;
     }
@@ -27,9 +30,10 @@ $a-hover: #f59431;
     text-transform: uppercase;
     font-weight: 600;
     padding: 12px 15px;
+    float:right;
 
     a {
-      color: #bec3c9;
+      color: $transcripticnavy;
       &:hover {
         color: $a-hover;
       }
