--- a/app/assets/stylesheets/workspace.css.scss
+++ b/app/assets/stylesheets/workspace.css.scss
@@ -4,14 +4,18 @@
 }
 
 #submit_run_btn{
-	width: 200px;
-	height:40px;
+	font-size: 1.5em;
+	height:60px;
+	padding:4px;
+	margin-right: auto;
 	margin-left: auto;
-	margin-right:auto;
+	text-align: center;
 	background-color: #394755;
 	color: #FBAE17;
 
 	&:hover{
 		background-color: red;
+		color: black;
 	}
+
 }
