--- a/app/views/containers/_form.html.erb
+++ b/app/views/containers/_form.html.erb
@@ -15,7 +15,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary submit">Submit</button>
+        <button type="button" class="btn submit">Submit</button>
       </div>
     </div>
   </div>
