--- a/app/views/runs/_form.html.erb
+++ b/app/views/runs/_form.html.erb
@@ -12,8 +12,8 @@
         <% end %>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary submit">Submit</button>
+        <button type="button" class="btn" data-dismiss="modal">Close</button>
+        <button type="button" class="btn submit">Submit</button>
       </div>
     </div>
   </div>
