--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -7,7 +7,7 @@
       <ul class="nav navbar-nav navbar-right">
         <% if user_signed_in? %>
         <li>
-          <%= link_to "Profile", "#" %>
+          <%= link_to "Profile", "#", id: "profile" %>
         </li>
         <li>
           <%= link_to "Log out", destroy_user_session_path, method: :delete %>
