minor styling fixes like submit button hover color

--- a/app/assets/stylesheets/workspace.css.scss
+++ b/app/assets/stylesheets/workspace.css.scss
@@ -14,8 +14,9 @@
 	color: #FBAE17;
 
 	&:hover{
-		background-color: red;
+		background-color: #AF4442;
 		color: black;
+		border: 1px solid $transcripticnavy;
 	}
 
 }
