Fix FontAwesome import

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,5 +1,6 @@
 @import "variables";
 @import "bootstrap";
+@import "font-awesome";
 @import "containerWorkspace";
 @import "global";
 @import "header";
@@ -21,9 +22,5 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
- *= require bootstrap
  *= require rails_bootstrap_forms
- *= require font-awesome
- *= require_tree .
- *= require_self
  */
