Create new instruction form JS widget

--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -31,5 +31,6 @@
 <%= render "containers/form" %>
 <%= render "projects/form" %>
 <%= render "runs/form" %>
+<%= render "instructions/form" %>
 
 <%= render "instructions/instruction_template" %>
