--- a/app/assets/stylesheets/profileWorkspace.css.scss
+++ b/app/assets/stylesheets/profileWorkspace.css.scss
@@ -5,5 +5,12 @@
       padding-top: 5px;
       padding-bottom: 5px;
     }
+    font-size: 0.9em;
+    ul ul{
+      font-size: 0.9em;
+      ul {
+        font-size: 0.9em;
+      }
+    }
   }
 }
