--- a/app/views/instructions/_form.html.erb
+++ b/app/views/instructions/_form.html.erb
@@ -1,5 +1,19 @@
-<%= bootstrap_form_tag html: { id: "instruction_form" } do |f| %>
-  <%= f.select :container, [], {}, label: "Container", id: "containers_selector" %>
-  <%= f.select :instruction_type, ["distribute", "transfer"], label: "Type" %>
-  <%= f.submit %>
-<% end %>
+<div class="modal fade" id="instructionModal" tabindex="-1" role="dialog" aria-labelledby="instructionModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+        <h4 class="modal-title" id="instructionModalLabel">New Instruction</h4>
+      </div>
+      <div class="modal-body">
+        <%= bootstrap_form_tag html: { id: "instruction_form" } do |f| %>
+          <%= f.select :instruction_type, ["distribute", "transfer"], {}, id: "instruction_type", label: "Type" %>
+        <% end %>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button type="button" class="btn submit">Submit</button>
+      </div>
+    </div>
+  </div>
+</div>
