--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,3 +1,4 @@
+<div id="signup">
 <h2>Sign up</h2>
 
 <%= bootstrap_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
@@ -15,3 +16,4 @@
 <% end %>
 
 <%= render "devise/shared/links" %>
+</div>
