more styling, sorry I keep committing to staging I'm an idiot

--- a/app/assets/stylesheets/containerWorkspace.css.scss
+++ b/app/assets/stylesheets/containerWorkspace.css.scss
@@ -2,6 +2,7 @@
   height: 250px;
   .tree {
     .container_elem {
+      font-size: 18px;
       display: block;
       color: #ecf0f1;
       margin: 5px 0 5px;
