--- a/app/views/instructions/_instruction_template.html.erb
+++ b/app/views/instructions/_instruction_template.html.erb
@@ -9,7 +9,9 @@
     </div>
     <div id="collapse{{index}}" class="panel-collapse collapse">
       <div class="panel-body">
- 
+        <div class="instruction_widget">
+        </div>
+        <button type="button" class="btn save">Save</button>
       </div>
     </div>
   </div>
