--- a/app/assets/stylesheets/instructionForm.css.scss
+++ b/app/assets/stylesheets/instructionForm.css.scss
@@ -20,13 +20,18 @@
 	}
 
 	.instruction_type {
+		font-style: bold;
+		font-size: 2.5em;
 		border-radius: 0 !important;
 		height: 100px;
-		width: 100px;
+		width: 100%;
 		position: relative;
 		border: 1px solid $transcripticnavy;
 		margin: 2px;
-		
+		&:hover{
+			color: white;
+			background-color: $transcripticnavy;
+		}
 	}
 	
 }
