changed instruction options to be more obviously scrollable

--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -37,6 +37,7 @@ body {
 
 #new_instruction_btn, #submit_run_btn {
   margin-right: auto;
+  margin-bottom: 1em;
   margin-left: auto;
   width: 100%;
 }
