--- a/app/assets/stylesheets/new.css.scss
+++ b/app/assets/stylesheets/new.css.scss
@@ -8,7 +8,10 @@
 	.checkbox{
 		float: right;
 	}
+	
 	input{
+		margin-bottom: 4px !important;
+
 		.btn{
 			margin-right: auto;
 			margin-left: auto;
