removed submit button for instruction list modal

--- a/app/assets/stylesheets/tree.css.scss
+++ b/app/assets/stylesheets/tree.css.scss
@@ -1,9 +1,9 @@
 .tree {
-  padding-left: 0px;
+  padding-left: .5em;
   font-size: 18px;
   li {
     list-style: none;
-    padding-left: 1em;
+    margin-left: 1em;
     cursor: pointer;
     i {
       font-family: FontAwesome;
