Add Instruction Editor widget and Seal functionality

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -5,6 +5,7 @@
 @import "global";
 @import "header";
 @import "instructionForm";
+@import "instructionEditor";
 @import "instructionWorkspace";
 @import "profileWorkspace";
 @import "tree";
