--- a/app/views/instructions/_form.html.erb
+++ b/app/views/instructions/_form.html.erb
@@ -12,14 +12,14 @@
           <button data-instruction="consolidate" class="instruction_type">Consolidate</button>
           <button data-instruction="mix" class="instruction_type">Mix</button>
           <button data-instruction="thermocycle" class="instruction_type">Thermocycle</button>
-          <button data-instruction="incubate" class="instruction_type">Incubate</button>
+          <button data-instruction="incubate" class="instruction_type" disabled>Incubate</button>
           <button data-instruction="seal" class="instruction_type">Seal</button>
           <button data-instruction="unseal" class="instruction_type">Unseal</button>
           <button data-instruction="cover" class="instruction_type">Cover</button>
           <button data-instruction="uncover" class="instruction_type">Uncover</button>
-          <button data-instruction="absorbance" class="instruction_type">Absorbance</button>
-          <button data-instruction="fluoresence" class="instruction_type">Fluoresence</button>
-          <button data-instruction="luminesence" class="instruction_type">Luminesence</button>
+          <button data-instruction="absorbance" class="instruction_type" disabled>Absorbance</button>
+          <button data-instruction="fluoresence" class="instruction_type" disabled>Fluoresence</button>
+          <button data-instruction="luminesence" class="instruction_type" disabled>Luminesence</button>
         </div>
       </div>
       <div class="modal-footer">
