--- a/app/views/instructions/_instruction_template.html.erb
+++ b/app/views/instructions/_instruction_template.html.erb
@@ -1,5 +1,5 @@
 <script id="instruction-template" type="text/x-handlebars-template">
-  <div class="panel panel-default">
+  <div class="instruction panel panel-default">
     <div class="panel-heading">
       <h4 class="panel-title">
         <a data-toggle="collapse" data-parent="#accordion" href="#collapse{{index}}">
@@ -11,8 +11,50 @@
       <div class="panel-body">
         <div class="instruction_widget">
         </div>
-        <button type="button" class="btn save">Save</button>
       </div>
     </div>
   </div>
+</script>
+
+<script id="distribute-form-template" type="text/x-handlebars-template">
+  <div class="from container_holder">Drop container here</div>
+  <div class="to container_holder">Drop container here</div>
+</script>
+
+<script id="transfer-form-template" type="text/x-handlebars-template">
+  <div class="from container_holder">Drop container here</div>
+  <div class="to container_holder">Drop container here</div>
+</script>
+
+<script id="consolidate-form-template" type="text/x-handlebars-template">
+  <div class="from container_holder">Drop container here</div>
+  <div class="to container_holder">Drop container here</div>
+</script>
+
+<script id="seal-form-template" type="text/x-handlebars-template">
+  <div class="container_holder">Drop container here</div>
+</script>
+
+<script id="unseal-form-template" type="text/x-handlebars-template">
+  <div class="container_holder">Drop container here</div>
+</script>
+
+<script id="cover-form-template" type="text/x-handlebars-template">
+  <div class="container_holder">Drop container here</div>
+</script>
+
+<script id="uncover-form-template" type="text/x-handlebars-template">
+  <div class="container_holder">Drop container here</div>
+</script>
+
+<script id="mix-form-template" type="text/x-handlebars-template">
+  <div class="container_holder">Drop container here</div>
+</script>
+
+<script id="spin-form-template" type="text/x-handlebars-template">
+  <div class="container_holder">Drop container here</div>
+</script>
+
+<script id="thermocycle-form-template" type="text/x-handlebars-template">
+  <div class="container_holder">Drop container here</div>
 </script>
