--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<main class="container">
   <div class="row">
     <div class="col-md-3">
       <div class="row">
@@ -25,7 +25,7 @@
         <%= button_tag "Submit Run To Transcriptic", class: "btn", id: "submit_run_btn", data: { toggle: "modal", target: "#submitModal" } %>
     </div>
   </div>
-</div>
+</main>
 <%= render "runs/submit" %>
 <%= render "containers/form" %>
 <%= render "projects/form" %>
