Add description to distribute widget

--- a/app/views/instructions/_instruction_template.html.erb
+++ b/app/views/instructions/_instruction_template.html.erb
@@ -17,18 +17,49 @@
 </script>
 
 <script id="distribute-form-template" type="text/x-handlebars-template">
-  <div class="from container_holder">Drop container here</div>
-  <div class="to container_holder">Drop container here</div>
+  <span class="instruction_description">Aspirates sufficient volume from the source well, then dispenses into each target well the volume requested, in the order specified.</span>
+  <div class="row">
+    <div class="col-md-6">
+      <h2>Source</h2>
+      <div class="from container_holder">Drop container here</div>
+      <div class="from_plate"></div>
+    </div>
+    <div class="col-md-6">
+      <h2>Destination</h2>
+      <div class="to container_holder">Drop container here</div>
+      <div class="to_plate"></div>
+    </div>
+  </div>
 </script>
 
 <script id="transfer-form-template" type="text/x-handlebars-template">
-  <div class="from container_holder">Drop container here</div>
-  <div class="to container_holder">Drop container here</div>
+  <div class="row">
+    <div class="col-md-6">
+      <h2>Source</h2>
+      <div class="from container_holder">Drop container here</div>
+      <div class="from_plate"></div>
+    </div>
+    <div class="col-md-6">
+      <h2>Destination</h2>
+      <div class="to container_holder">Drop container here</div>
+      <div class="to_plate"></div>
+    </div>
+  </div>
 </script>
 
 <script id="consolidate-form-template" type="text/x-handlebars-template">
-  <div class="from container_holder">Drop container here</div>
-  <div class="to container_holder">Drop container here</div>
+  <div class="row">
+    <div class="col-md-6">
+      <h2>Source</h2>
+      <div class="from container_holder">Drop container here</div>
+      <div class="from_plate"></div>
+    </div>
+    <div class="col-md-6">
+      <h2>Destination</h2>
+      <div class="to container_holder">Drop container here</div>
+      <div class="to_plate"></div>
+    </div>
+  </div>
 </script>
 
 <script id="seal-form-template" type="text/x-handlebars-template">
