Add headers to seal and unseal widgets

--- a/app/views/instructions/_instruction_template.html.erb
+++ b/app/views/instructions/_instruction_template.html.erb
@@ -63,10 +63,12 @@
 </script>
 
 <script id="seal-form-template" type="text/x-handlebars-template">
+  <h2>Container</h2>
   <div class="container_holder">Drop container here</div>
 </script>
 
 <script id="unseal-form-template" type="text/x-handlebars-template">
+  <h2>Container</h2>
   <div class="container_holder">Drop container here</div>
 </script>
 
