--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -11,6 +11,7 @@
 @import "tree";
 @import "workspace";
 @import "footer";
+@import "plate";
 @import "new";
 /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
