--- a/app/views/instructions/_instruction_template.html.erb
+++ b/app/views/instructions/_instruction_template.html.erb
@@ -19,15 +19,18 @@
 <script id="distribute-form-template" type="text/x-handlebars-template">
   <span class="instruction_description">Aspirates sufficient volume from the source well, then dispenses into each target well the volume requested, in the order specified.</span>
   <div class="row">
+      Volume: <%= text_field_tag :volume, "", class: "volume" %>
+  </div>
+  <div class="row">
     <div class="col-md-6">
       <h2>Source</h2>
-      <div class="from container_holder">Drop container here</div>
-      <div class="from_plate"></div>
+      <div data-ctype="from" class="from container_holder">Drop container here</div>
+      <div class="from plate"></div>
     </div>
     <div class="col-md-6">
       <h2>Destination</h2>
-      <div class="to container_holder">Drop container here</div>
-      <div class="to_plate"></div>
+      <div data-ctype="to" class="to container_holder">Drop container here</div>
+      <div class="to plate"></div>
     </div>
   </div>
 </script>
