Add submit success modal and minor fixes

--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -27,6 +27,7 @@
   </div>
 </main>
 <%= render "runs/submit" %>
+<%= render "runs/success" %>
 <%= render "containers/form" %>
 <%= render "projects/form" %>
 <%= render "runs/form" %>
