--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,6 +13,7 @@
 @import "footer";
 @import "plate";
 @import "new";
+@import "run_success_form";
 /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
  * listed below.
